[project]
name = "signxml"
description = "Python XML Signature and XAdES library"
readme = "README.rst"
requires-python = ">=3.8"
license = { text = "Apache Software License" }
authors = [{ name = "Andrey Kislyuk"}, {email = "kislyuk@gmail.com" }]
maintainers = [{ name = "Andrey Kislyuk"}, {email = "kislyuk@gmail.com" }]
dynamic = ["version"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Development Status :: 5 - Production/Stable",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "lxml >= 5.2.1, < 6",  # Ubuntu 24.04 LTS
    "cryptography >= 43",  # Required to support client certificate validation
    "certifi >= 2023.11.17",  # Ubuntu 24.04 LTS
    "asn1crypto >= 1.5.1",
    # "tsp-client >= 0.1.3",
]

[project.optional-dependencies]
test = [
    "ruff",
    "coverage",
    "build",
    "wheel",
    "mypy",
    "lxml-stubs",
]

[project.urls]
"Homepage"= "https://github.com/XML-Security/signxml"
"Documentation"= "https://xml-security.github.io/signxml/"
"Source Code"= "https://github.com/XML-Security/signxml"
"Issue Tracker"= "https://github.com/XML-Security/signxml/issues"
"Change Log"= "https://github.com/XML-Security/signxml/blob/main/Changes.rst"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
skip = ["signxml/__init__.py", "signxml/xades/__init__.py"]
skip_gitignore = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
per-file-ignores = {"signxml/__init__.py" = ["F401"], "signxml/xades/__init__.py" = ["F401"], "signxml/verifier.py" = ["E721"]}
